refactor: modernize maven poms, eliminate compiler warnings, and refine docs